# N-Queens-Count-Sol

./: CMakeLists.txt  LICENSE  README.md  bitcombcolex.h  bitcombcolex.t.cpp  bmi2.h  bmintrin.h  board.h  board.t.cpp  cfg.h  divider.h  foreach2.h  foreach2.t.cpp  freeze.h  main.cpp  matchtr.h  matchtr.t.cpp  pack.h  pack.t.cpp  prefetch.h  prefetchx86.h  qsymmetry.h  qsymmetry.t.cpp  quadrants1.h  quadrants1.t.cpp  scheduler.h  schedulermt.h  schedulerst.h  sieve.h  sieve.t.cpp  solcounter.h  start2d.h  startcenter.h  startempty.h  subsquare.h  subsquare.t.cpp  util.h  util.t.cpp
